--- a/index.html
+++ b/index.html
@@ -41,18 +41,14 @@
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@taidalog">
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="style.css?v=0.9.1">
-  <!-- script -->
-  <script type="text/javascript" src="bundle.js?v=0.9.1"></script>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&text= !&quot;$%()*+,-./0123456789:=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&text= !&quot;$()*+,-./0123456789:=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&display=swap"
     rel="stylesheet">
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&text= !&quot;;$%()*+,-./0123456789:=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&lt;&gt;&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&text= !&quot;;$()*+,-./0123456789:=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz&lt;&gt;&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet"
@@ -66,6 +62,8 @@
 
     gtag('config', 'G-M1K3JX5RWM');
   </script>
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="src/App.fs.js"></script>
 </head>
 
 <body>
