--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
       </ul>
     </div>
 
+    <audio id="beep" preload="auto">
+      <source src="audio/beep.mp3" type="audio/mp3"><!-- © 2004-2018 On-Jin ～音人～ -->
+    </audio>
+
+    <audio id="bell" preload="auto">
+      <source src="audio/bell.mp3" type="audio/mp3"><!-- © 2013-2023 効果音ラボ -->
+    </audio>
+
   </main>
   <footer>
     <div>
