--- a/index.html
+++ b/index.html
@@ -155,23 +155,18 @@
   </main>
 
   <footer>
-    <div>
-      <div class="footer-item" translate="no"><small>&copy; 2023-2024 <a
-            href="https://taidalog.github.io/">taidalog</a></small></div>
-      <div class="footer-item" translate="no"><small>
-          <a href="https://github.com/taidalog/ccc/releases">Version 0.9.1</a></small></div>
-      <div class="footer-item"><small><a href="https://github.com/taidalog/ccc/blob/main/README.ja.md"
-            target="_blank">README</a></small></div>
-      <div class="footer-item"><small><a href="#" id="informationPolicyLink">情報の外部送信について</a></small></div>
-      <div class="footer-item"><small><a href="https://odaibako.net/u/taidalog">お題箱</a></small></div>
-      <div class="footer-item" translate="no"><small>
-          <a href="https://github.com/taidalog/ccc">Repository on GitHub</a></small></div>
-    </div>
-    <div>
-      <div class="footer-item"><small>Powered by <a id="footerFSharp" href="https://fsharp.org/" translate="no">F#</a>
-          and <a id="footerFable" href="https://fable.io" translate="no">Fable</a>.
-          Thank you!</small></div>
-    </div>
+    <small translate="no">&copy; 2023-2024 <a href="https://taidalog.github.io/">taidalog</a></small>
+    <small translate="no">
+      <a href="https://github.com/taidalog/ccc/releases">Version 0.9.1</a></small>
+    <small translate="no"><a href="https://github.com/taidalog/ccc/blob/main/README.ja.md"
+        target="_blank">README</a></small>
+    <small><a href="#" id="informationPolicyLink">情報の外部送信について</a></small>
+    <small><a href="https://odaibako.net/u/taidalog">お題箱</a></small>
+    <small>
+      <a href="https://github.com/taidalog/ccc">Repository on GitHub</a></small>
+    <small>Powered by <a id="footerFSharp" href="https://fsharp.org/" translate="no">F#</a>
+      and <a id="footerFable" href="https://fable.io" translate="no">Fable</a>.
+      Thank you!</small>
   </footer>
 </body>
 
