--- a/index.html
+++ b/index.html
@@ -68,10 +68,17 @@
 
 <body>
   <header>
+    <h1 translate="no">ccc</h1>
     <div>
-      <h1 translate="no">ccc</h1>
-    </div>
-    <div>
+      <span id="startButton" class="material-symbols-outlined" translate="no">
+        play_arrow
+      </span>
+      <span id="pauseButton" class="material-symbols-outlined" translate="no">
+        pause
+      </span>
+      <span id="stopButton" class="material-symbols-outlined" translate="no">
+        stop
+      </span>
       <span id="helpButton" class="material-symbols-outlined help-button" translate="no">
         help
       </span>
