Implemented a manual bell button. Close #66.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
       <span id="stopButton" class="material-symbols-outlined" translate="no">
         stop
       </span>
+      <span id="bellButton" class="material-symbols-outlined" translate="no">
+        music_note
+      </span>
       <span id="helpButton" class="material-symbols-outlined help-button" translate="no">
         help
       </span>
